--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-vertical-timeline-component": "^3.5.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
   },
