homepage added for live project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-app",
+  "homepage": "https://ikbalrazu.github.io/MyPortfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
