--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "aos": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -18,6 +19,7 @@
     "react-scripts": "5.0.0",
     "react-vertical-timeline-component": "^3.5.2",
     "styled-components": "^5.3.3",
+    "swiper": "^8.3.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
