--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@hookform/resolvers": "^2.9.10",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "aos": "^2.3.4",
+    "axios": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.41.1",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
@@ -21,7 +24,8 @@
     "react-vertical-timeline-component": "^3.5.2",
     "styled-components": "^5.3.3",
     "swiper": "^8.3.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
