--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "react-slideshow-image": "^4.0.5",
+    "react-toggle": "^4.1.3",
     "react-vertical-timeline-component": "^3.5.2",
     "styled-components": "^5.3.3",
     "swiper": "^8.3.1",
